// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AssetBadge > Snapshot Tests - UI Design Freeze > should match snapshot with default variant 1`] = `
<span
  class="px-1.5 py-0.5 bg-gray-700/50 text-gray-300 text-xs rounded"
>
  ETH
</span>
`;

exports[`AssetBadge > Snapshot Tests - UI Design Freeze > should match snapshot with highlight variant 1`] = `
<span
  class="px-2 py-1 bg-purple-600/20 text-purple-300 text-xs rounded border border-purple-500/30"
>
  BTC
</span>
`;
